  This used to fail before year 1 as the era was ignored
  Fixed to return the correct year
  https://github.com/JodaOrg/joda-time/pull/8

- MutableDateTime.setDate(ReadableInstant)  [163]
  Fixed to handle cross-time-zone issues properly rather than always using UTC

- BasicGJChronology.getDaysInMonthMaxForSet  [165]
  Fixed calculate the correct maximum length if the input day-of-month value is less than 1

- DateTimeFormatter.parseInto() [3522138]
  The v2.0 changes to handle parsing of month/day on their own (for Feb 29th) cause
  parseInto() to lose the year. This fix reverts behaviour to v1.x so that parseInto()
  will use the supplied year, not the default year of the formatter.

- DateTimeFormatter.isPrinter()/isParser() and related
  The Javadoc for DateTimeFormatterBuilder specified behaviour when the formatter
  could not print or could not parse, but the code didn't implement it
  Now it does, which means that DateTimeFormatter.isPrinter()/isParser() are now correct.
  The formatter will also now throw UnsupportedOperationException when unable to print/parse.

- Period formatter [3564249]
  Formatting did not correctly output values for negative milliseconds between zero and -1 second

- FieldUtils.safeMultiply(long,int) [3520651]
  Fix implementation to throw exception for (Long.MIN_VALUE, -1)

- Fix TestReadableDurationConverter [3515086]
  Test case didn't work if deafult time zone was UTC

- Javadoc fix to BaseChronology [3513326]

- Javadoc clarify on formatter builder [mailing list email]

- Fixed Spanish translation of day for periods - dia now has accented i
  https://github.com/JodaOrg/joda-time/pull/5


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
All feedback is welcomed via the joda-interest mailing list.

The Joda team
http://joda-time.sourceforge.net